# desktop_pet

./: .gitignore  .gitmodules  .tasks  README.md  __init__.py  build.zig  compile_flags.txt  main.py  pet.py  pyproject.toml  requirements.txt  test.ipynb
hzy/: __init__.py  fake_ua.py  pic_encode.py
hzy/aiofile/: __init__.py  aiofile.py
include/: image.hpp
music/: AES.py  RSA.py  __init__.py  model.py  music_player.py  pictures.py  ui_login.py  ui_login.ui  ui_music_player.py  ui_music_player.ui
music/data/: listen.dump
music/data/musics/: 1388961672_wyy.m4a  6005971CJ04_mg.m4a
music/kg/: cookie  cookie.py  js_code.py  kg.js  kg.py
music/kw/: kw.py
music/mg/: __init__.py  cookie  cookie.py  mg.py  setting.py
music/qq/: qq.py
music/qqjt/: cookie  qqjt.py
music/wyy/: cookie  cookie.py  js_code.py  wyy.js  wyy.py
pet/: __init__.py  __main__.py  core.py  model.py  pet.py  pictures.py  setting.py
pet/hzy/: __init__.py  fake_ua.py  pic_encode.py
pet/hzy/aiofile/: __init__.py  aiofile.py
pet/image/: __init__.py  main.py
pet/lib/: aiofile.py
pet/lib/talk/: __init__.py  talker.py
pet/music/: AES.py  RSA.py  __init__.py  music_player.py  musicer_model.py  pictures.py  ui_login.py  ui_login.ui  ui_music_player.py  ui_music_player.ui
pet/music/kg/: __init__.py  kg.py
pet/music/kw/: kw.py  (+1 more)
pet/talk/: __init__.py  talker.py
pet/translate/: __init__.py  translater.py  ui_translate.py  ui_translate.ui
src/: core.cpp  image.cpp
src/desktop_pet/: __main__.py  core.py
translate/: __init__.py  js_code.py  sign.js  translate.py  ui_translate.ui
(+20 files in other folders)
